chi/org.eclipse.escet.chi.tests/tests/spec/global/proc_inst.chi
################################################################################
# Copyright (c) 2010, 2020 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the terms
# of the MIT License which is available at https://opensource.org/licenses/MIT
#
# SPDX-License-Identifier: MIT
#################################################################################

proc P(chan? int a; chan! int b; chan!? int c):
    pass
end


proc Q(chan? int a; chan! int b; chan!? int c): run P(a,b,c) end

proc QA2(chan? int a; chan! int b; chan!? int c): run P(b,b,c) end
proc QA3(chan? int a; chan! int b; chan!? int c): run P(c,b,c) end

proc QB2(chan? int a; chan! int b; chan!? int c): run P(a,a,c) end
proc QB3(chan? int a; chan! int b; chan!? int c): run P(a,c,c) end

proc QC2(chan? int a; chan! int b; chan!? int c): run P(a,b,a) end
proc QC3(chan? int a; chan! int b; chan!? int c): run P(a,b,b) end
